bibliographic references in text corrected

--- a/Cap_2.tex
+++ b/Cap_2.tex
@@ -1,7 +1,7 @@
 \chapter{Revisión Bibliográfica} \label{chap:Revision}
 El reconocimiento de individuos usando el rostros se realiza a partir de imágenes, las cuales pueden ser estáticas (fotografías) o dinámicas (imágenes de vídeo). En el caso de la vídeo vigilancia se toma en cuenta el hecho que no se tiene control sobre varios factores que influye en proceso de reconocimiento como se explica en la sección \ref{ssc:PlanteamientoProblema}.
 
-Según \textit{surveys} de la literatura como Zhao \cite{zhao2003face}, Parmar \cite{parmar2014face} y Pandya \cite{pandya2013survey} los métodos de reconocimiento de rostros se pueden categorizarse mediante el enfoque en por el cual abordan el problema, es decir como tratan a la imagen del rostro. En la figura \ref{im:metodos} se puede ver algunos algoritmos clasificados por enfoque. Siendo algunos de los más conocidos \acf{LDA} \cite{zhao1999subspace}, \acf{PCA}\cite{turk1991eigenfaces} , \acf{EBGM} \cite{wiskott1997face}. % \cite{zhao2003face}.
+Según \textit{surveys} de la literatura como \cite{zhao2003face}, \cite{parmar2014face} y \cite{pandya2013survey} los métodos de reconocimiento de rostros se pueden categorizarse mediante el enfoque en por el cual abordan el problema, es decir como tratan a la imagen del rostro. En la figura \ref{im:metodos} se puede ver algunos algoritmos clasificados por enfoque. Siendo algunos de los más conocidos \acf{LDA} (\cite{zhao1999subspace}), \acf{PCA}(\cite{turk1991eigenfaces}), \acf{EBGM} (\cite{wiskott1997face}). % \cite{zhao2003face}.
 \begin{figure}[h]
 \center
 \includegraphics[scale=1]{Metodos}
