--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -25,13 +25,13 @@ A raíz de este trabajo de tesis se ha desarrollado varias propuestas para traba
 \item Probar técnicas de súper resolución para mejorar el reconocimiento y poder detectar rostros pequeños en baja resolución.
 \item Establecer un método de \textit{tracking} que sea robusto en los ambientes no controlados.
 \item Realizar un análisis del coste computacional del proceso de \textit{pipeline} e identificar que procesos se pueden optimizar
-\item Es necesario seguir la investigación de McPherson\cite{mcpherson2016defeating} para poder replicar el experimento y probar con más bases de datos, situaciones de video, y uniformizar las condiciones de las pruebas.
+\item Es necesario seguir la investigación de \cite{mcpherson2016defeating} para poder replicar el experimento y probar con más bases de datos, situaciones de video, y uniformizar las condiciones de las pruebas.
 \end{itemize}
 
 \section{Publicaciones}
 A lo largo de este trabajo de tesis se presentó los siguientes artículos:
 \begin{itemize}
 \item An Improved Face Recognition Based on Illumination Normalization Technique and Elastic Bunch Graph Matching en ICFIP 2017 International Conference on Frontiersof Image Processing (Articulo aceptado)
-\item Modifications on Illumination,Distance function and Gabor masks for Elastic Bunch Graph Matching en la 35th International Conference of the Chilean Computer Science Society (SCCC 2016) organizado con la 42th Latin American Computing Conference (CLEI 2016)\cite{caceres2016modifications}.
+\item Modifications on Illumination,Distance function and Gabor masks for Elastic Bunch Graph Matching en la 35th International Conference of the Chilean Computer Science Society (SCCC 2016) organizado con la 42th Latin American Computing Conference (CLEI 2016) (\cite{caceres2016modifications}).
 \end{itemize}
 
