Add graph methods comparisson table and related  in chapter 5 and 2

--- a/Bibliog.bib
+++ b/Bibliog.bib
@@ -977,4 +977,35 @@
   year={2013}
 }
 
+@article{fazl2007robust,
+  title={Robust face recognition through local graph matching},
+  author={Fazl-Ersi, Ehsan and Zelek, John S and Tsotsos, John K},
+  journal={Journal of Multimedia},
+  volume={2},
+  number={5},
+  pages={31--37},
+  year={2007},
+  publisher={Citeseer}
+}
+
+@article{kafai2014reference,
+  title={Reference face graph for face recognition},
+  author={Kafai, Mehran and An, Le and Bhanu, Bir},
+  journal={IEEE Transactions on information forensics and security},
+  volume={9},
+  number={12},
+  pages={2132--2143},
+  year={2014},
+  publisher={IEEE}
+}
+
+@inproceedings{liao2000face,
+  title={Face recognition based on multiple facial features},
+  author={Liao, Rui and Li, Stan Z},
+  booktitle={fg},
+  pages={239},
+  year={2000},
+  organization={IEEE}
+}
+
 % ---------------------------------------------------------------------
