--- a/Cap_1.tex
+++ b/Cap_1.tex
@@ -1,6 +1,6 @@
 \chapter{Introducción y contexto}\label{chap:Intro}
 
-Visión computacional es el conjunto de metodos y tecnicas por las cuales se intenta comprender y analizar las imagenes del mundo real mediante el uso de una computadora.
+Visión computacional es el conjunto de métodos y técnicas por las cuales se intenta comprender y analizar las imágenes del mundo real mediante el uso de una computadora.
 Representa un problema bastante difícil, en parte porque es un problema inverso en el cual intentamos recuperar algunas incógnitas de cómo llegar a una solución especifica, esto quiere decir que sabemos cual es la solución, por ejemplo reconocer un auto o segmentar una figura, pero no conocemos la totalidad del proceso por el cual hemos llegado a dicha solución (\cite{szeliski2010computer}). 
 
 Según \cite{szeliski2010computer} las áreas más comunes de visión computacional son: 
@@ -65,7 +65,7 @@ Se ha mencionado el contexto de esta tesis que es el reconocimiento de rostros e
 
 
 \section{Planteamiento del problema}\label{ssc:PlanteamientoProblema}
-El problema de reconocimiento de rostro en vídeo vigilancia aun no ha sido resuelto en visión computacional e inclusive resulta un problema para el ser humano como se explica en \cite{burton1999face} donde se prueba que las personas tienen problemas para reconocer sujeto con los que no son familiares en videos de baja resolución y también en vídeos de alta calidad.
+El problema de reconocimiento de rostro en vídeo vigilancia aun no ha sido resuelto en visión computacional e inclusive resulta un problema para el ser humano como se explica en \cite{burton1999face} donde se prueba que las personas tienen problemas para reconocer sujeto con los que no son familiares en vídeos de baja resolución y también en vídeos de alta calidad.
 Este problema es el resultado de varios factores que pueden ser agrupados en problemas relacionados con el ambiente no controlado.
 
 %Problemas en el reconocimiento de rostros
@@ -138,9 +138,9 @@ A parte de los problemas listados, cuando el reconocimiento de rostros se aplica
 \end{enumerate}
 
 %conclusion sobre seccion // mencionar biometria
-Como se ha podido observar en esta sección el reconocimiento de rostros en vídeo vigilancia es una tarea muy difícil debido a la conjunción de varios factores, como el ambiente no controlado donde aparecen todas las dificultades relacionadas al típico reconocimiento de rostros. A ello se suma los problemas del escenario de video vigilancia en el cual se puede esperar la falta de cooperación de los sujetos a identificar y finalmente la calidad de los videos y las imágenes de los rostros.
+Como se ha podido observar en esta sección el reconocimiento de rostros en vídeo vigilancia es una tarea muy difícil debido a la conjunción de varios factores, como el ambiente no controlado donde aparecen todas las dificultades relacionadas al típico reconocimiento de rostros. A ello se suma los problemas del escenario de vídeo vigilancia en el cual se puede esperar la falta de cooperación de los sujetos a identificar y finalmente la calidad de los vídeos y las imágenes de los rostros.
 
-Como parte de la propuesta expuesta en detalle en el Capítulo \ref{chap:Propuesta} intentamos resolver el problema de reconocimiento de rostros en un \textit{pipeline} de video vigilancia bajo las condiciones de una cámara de seguridad en alta definición, proponemos enfrentar las variaciones de iluminación a través de técnicas de pre-procesamiento, afrontar en parte el problema de variación de poses con el uso de los últimos avances en el \acf{CLNF} y \acf{EBGM} como método de reconocimiento biométrico. 
+Como parte de la propuesta expuesta en detalle en el Capítulo \ref{chap:Propuesta} intentamos resolver el problema de reconocimiento de rostros en un \textit{pipeline} de vídeo vigilancia bajo las condiciones de una cámara de seguridad en alta definición, proponemos enfrentar las variaciones de iluminación a través de técnicas de pre-procesamiento, afrontar en parte el problema de variación de poses con el uso de los últimos avances en el \acf{CLNF} y \acf{EBGM} como método de reconocimiento biométrico. 
 
 \section{Objetivos}\label{scc:Objetivos}
 
