--- a/abreviaturas.tex
+++ b/abreviaturas.tex
@@ -33,4 +33,7 @@
 \acro{SVM}{\textit{Support Vector Machine}}
 \acro{PDBNN}{\textit{Probabilistic Decision-Based Neural Network}}
 \acro{RBF}{\textit{Radial Basis Function}}
+\acro{LPP}{\textit{Locality Preserving Projection}}
+\acro{RFG}{\textit{Reference Face Graph}}
+\acro{DCT}{\textit{Discrete Cosine Transform}}
 \end{acronym}
