--- a/Cap_2.tex
+++ b/Cap_2.tex
@@ -28,34 +28,35 @@ En esta sección se hace una breve introducción a los métodos holísticos que 
 \subsection{\acf{PCA}}
 \ac{PCA} es un método para la reducción de la dimensionalidad sin supervisión que puede ser aplicada para abordar el problema de reconocimiento de rostros. En \cite{sirovich1987low} se argumenta que cualquier imagen de rostro puede ser aproximadamente reconstruida como la suma con pesos de una pequeña colección de imágenes base que llaman \textit{eigenimages} y la media de las imágenes del rostro. Con ello \cite{turk1991eigenfaces} presenta su conocido método de \textit{eigenfaces}.
 
-A continuación una breve explica como funciona este método:
+% A continuación una breve explica como funciona este método:
 
-Se supone que $\Gamma$ es un vector $N^2\times 1$ que corresponde a una imagen de rostro $N\times N$ llamada $I$ donde el objetivo es representar $\Gamma (\Phi-media)$ en un espacio de baja dimensión; $\Phi- media=w_1u_1+w_2u_2+.....w_ku_k$ donde $k<<N^2$ , $w$ es el peso asociado al \textit{eigenface} $u$.
+% Se supone que $\Gamma$ es un vector $N^2\times 1$ que corresponde a una imagen de rostro $N\times N$ llamada $I$ donde el objetivo es representar $\Gamma (\Phi-media)$ en un espacio de baja dimensión; $\Phi- media=w_1u_1+w_2u_2+.....w_ku_k$ donde $k<<N^2$ , $w$ es el peso asociado al \textit{eigenface} $u$.
 
-Entonces si se tiene un conjunto de imágenes de rostro del mismo tamaño ${I_1,I_2,...,I_Q}$ donde cada $I_i$ se puede representar como un vector $\Gamma_i$, se tiene que calcular el vector promedio de rostro $\Psi$:
-\[\Psi =\frac{1}{Q}\sum^Q_{i=1}\Gamma_i\] 
-La nueva representación del rostro es: 
-\[\Phi_i=\Gamma_i-\Psi\]
-Después se calcula una matriz de covarianza $Co$:
-\[Co=\frac{1}{Q}\sum^M_{n=1}\Phi_n \Phi^T_n=AA^T \]
-Siendo una matriz $N^2\times N^2$ donde $A=[\Phi_1\Phi_2...\Phi_M]$ es una matriz $N^2\times Q$.
+% Entonces si se tiene un conjunto de imágenes de rostro del mismo tamaño ${I_1,I_2,...,I_Q}$ donde cada $I_i$ se puede representar como un vector $\Gamma_i$, se tiene que calcular el vector promedio de rostro $\Psi$:
+% \[\Psi =\frac{1}{Q}\sum^Q_{i=1}\Gamma_i\] 
+% La nueva representación del rostro es: 
+% \[\Phi_i=\Gamma_i-\Psi\]
+% Después se calcula una matriz de covarianza $Co$:
+% \[Co=\frac{1}{Q}\sum^M_{n=1}\Phi_n \Phi^T_n=AA^T \]
+% Siendo una matriz $N^2\times N^2$ donde $A=[\Phi_1\Phi_2...\Phi_M]$ es una matriz $N^2\times Q$.
 
-Sobre la matriz $AA^T$ se debe hallar auto vectores $u_i$, pero resulta ser una matriz muy grande lo que resulta poco practico, por lo que se considera la matriz $A^TA$ que es una matriz $Q\times Q$ donde si podemos calcula auto vectores $v_i$ siendo: 
-\[A^TAv_i=\mu_iv_i\]
-Dónde existe una relación de correspondencia donde los $Q$ autovalores y autovectores de $A^TA$ son los $Q$ autovalores y autovectores más grandes de $AA^T$. De esta manera mantenemos los $K$ vectores mas significativos. Ahora cada rostros esta representado por: 
-\[\Phi_i-media= \sum^{K}_{j=1} w_j u_j, (W_j=u^T_j\Phi_i)\]
-Dónde $u_j$ es un \textit{eigenface}, finalmente cada rostros puede ser representado como una colección de pesos:
-\[\Omega_i=\begin{bmatrix}
-w^i_1\\ 
-w^i_2\\ 
-...\\ 
-w^i_k
-\end{bmatrix} , i=1,2,...,Q\]
+% Sobre la matriz $AA^T$ se debe hallar auto vectores $u_i$, pero resulta ser una matriz muy grande lo que resulta poco practico, por lo que se considera la matriz $A^TA$ que es una matriz $Q\times Q$ donde si podemos calcula auto vectores $v_i$ siendo: 
+% \[A^TAv_i=\mu_iv_i\]
+% Dónde existe una relación de correspondencia donde los $Q$ autovalores y autovectores de $A^TA$ son los $Q$ autovalores y autovectores más grandes de $AA^T$. De esta manera mantenemos los $K$ vectores mas significativos. Ahora cada rostros esta representado por: 
+% \[\Phi_i-media= \sum^{K}_{j=1} w_j u_j, (W_j=u^T_j\Phi_i)\]
+% Dónde $u_j$ es un \textit{eigenface}, finalmente cada rostros puede ser representado como una colección de pesos:
+% \[\Omega_i=\begin{bmatrix}
+% w^i_1\\ 
+% w^i_2\\ 
+% ...\\ 
+% w^i_k
+% \end{bmatrix} , i=1,2,...,Q\]
 
-De esta manera \ac{PCA} reduce la dimensión de una imagen de rostro a un conjunto de pesos. Un problema que tiene esta relacionado al proceso de reducción en si donde no se sabe que características se están extrayendo y presenta una susceptibilidad a la variación de la data ingresada.
+% De esta manera \ac{PCA} reduce la dimensión de una imagen de rostro a un conjunto de pesos. 
+Un problema que \ac{PCA} tiene, está relacionado al proceso de reducción en si donde no se sabe que características se están extrayendo y presenta una susceptibilidad a la variación de la data ingresada.
 
 \subsection{\ac{KFA}}
-\ac{KFA} \cite{liu2006capitalize} es un método que capitaliza la técnicas de incremento de la dimensionalidad, donde argumenta que métodos de reducción de dimencionalidad como \ac{PCA} tienen problemas reconociendo patrones complejos como lo es el rostro, por lo tanto es necesario un método que pueda reconocer patrones de alta dimencionalidad.
+\ac{KFA} \cite{liu2006capitalize} es un método que capitaliza la técnicas de incremento de la dimensionalidad, donde argumenta que métodos de reducción de dimensionalidad como \ac{PCA} tienen problemas reconociendo patrones complejos como lo es el rostro, por lo tanto es necesario un método que pueda reconocer patrones de alta dimensionalidad.
 
 \ac{KFA} primero realiza un mapeo del espacio de la información de entrada a un espacio de características de alta dimensionalidad, y después implementa el análisis multiclase de Fisher en dicho espacio de características. \ac{KFA} usa Gabor Wavelets (en la sección \ref{scc::EBGM} se explica con más detalle) como método para incrementar la dimensionalidad.
 
@@ -75,12 +76,23 @@ En aplicaciones aplicaciones típicas de reconocimiento de rostros tenemos vecto
 
 %parrafo de conclusion de seccion
 
-En esta sección se ha descrito ejemplos de métodos holísticos de diferentes clases. Cada uno enfrenta el reconocimiento de rostros de manera diferente mediante reducción de dimencionalidad lineal, con un clasificador y con un aumento de la dimencionalidad. 
+En esta sección se ha descrito ejemplos de métodos holísticos de diferentes clases. Cada uno enfrenta el reconocimiento de rostros de manera diferente mediante reducción de dimensionalidad lineal, con un clasificador y con un aumento de la dimensionalidad. 
 
-En todos ellos no sabemos que características estamos midiendo, en contraste con la  próxima sección donde presentamos un método basado en características.
+En todos ellos no sabemos que características estamos midiendo, en contraste con la próxima sección donde presentamos un método basado en características.
 
 \section{Basados en modelos y características}
 Un enfoque para abordar el reconocimiento de rostros es mediante el uso de modelos para poder hallar características locales las cuales son pueden se ponderadas para hallar una respuesta al reconocimiento de rostros. A continuación mencionamos:
+
+\subsection{\ac{RFG}}
+A diferencia de otros métodos donde se hace una comparación directa entre grafos, \ac{RFG} \cite{kafai2014reference} usa un conjunto de varios rostros en diferentes poses para crear un grupo de referencia(conjunto base) y así hacer una comparación indirecta a través del este conjunto base para ello hace uso de \ac{DCT} para medir la similaridad entre rostros.
+A cada imagen del conjunto base se divide entre una malla de 2, 9, 16 hasta llegar a 100 secciones y a cada sección se le aplica una \ac{DCT} para crear un vector de características cada vector de representa a una persona del conjunto base en todas sus pose, y este vector es representado como un nodo en un grafo donde se relaciona con los demás rostros del conjunto base, cualquier nuevo rostro es comparado con este grafo de rostro en función a su similaridad y cercanía a los nodos, para así poder hallar su lugar en el grafo de esta manera los rostros a reconocer se miden en función al grafo de referencia
+
+\subsection{\textit{Face recognition based on multiple facial features}}
+Es un método similar al trabajo original de Wiskott\cite{wiskott1997face} donde también se usa un grafo que representa el rostro donde cada nodo representa un punto de interés el cual contiene un vector de características generado a través de convoluciones usando Gabor wavelet, este método se diferencia por usar solo 17 puntos de interés un una medida de similaridad propuesta como \textit{Two-Layer Nearest Neighbor} \cite{liao2000face} que busca cual similar los cada nodos del grafo con sus respectivas contra partes en los grafos de los rostros a reconocer la similaridad final se calcula como la división de la sumatoria de todos los nodo por los $H$ nodos mas importantes donde el valor de $H$ es definido como 5 por el autor.
+
+\subsection{Local Graph Matching}
+En lugar de usar un solo grafo como EBGM, Local Graph Matching \cite{fazl2007robust} usa un conjunto de grafos de 3 nodos y 3 aristas donde cada nodo es un punto distintivo en la imagen del rostro. para calcular los puntos de interés se calcula en una fase de entrenamiento el rostro medio donde se distinguen los punto con mayor variación estadística, a partir de los puntos encontrados se generan grafos triangulando los puntos que estén mas próximos entre si.
+Para su fase de reconocimiento se utiliza una convolución con un Gabor wavelet para extraer características y se utiliza similaridad de cosenos para calcular a quien pertenece la imagen a reconocer.
 
 \subsection{3-D Morphable Model}
 3-D \textit{Morphable Model} se utilizan para el análisis de rostros debido a las propiedades intrínsecas de los rostros en 3D que proporcionan una representación que es inmune a las variaciones intra-personales como la pose y la iluminación. 
